# langgamejamjam

./: AGENTS.md  Cargo.toml  README.md  build-web.sh  design-2.md  todo.md
docs/: index.html  langame.js  langame.wasm  langame_bg.wasm
sample/: basic.l  inventory.l  runner.l  scalogic.l
src/: ast.rs  frontend.rs  ir.rs  main.rs  session.rs  solve.rs  solver.rs  stdlib.l  test_samelength.rs
src/ast/: compile.rs  parser.rs  parser_tests.rs
src/frontend/: ffi.rs  frontend_tests.rs
src/solver/: engine.rs  engine_tests.rs  game_state.rs  ir.rs  state_tests.rs
