[package]
name = "langame"
version = "0.1.0"
edition = "2024"

[dependencies]
z3 = { version = "0.19.6", features = ["bundled"], default-features = false }
nom = "8.0.0"
nom_locate = "5.0.0"
im = "15.1"

[profile.release]
opt-level = 3
strip = true

[profile.dev.package.z3]
opt-level = 3

[profile.dev.package.z3-sys]
opt-level = 3

[profile.release.package.z3]
opt-level = 3

[profile.release.package.z3-sys]
opt-level = 3
